fix issue of scrollbar appearance

--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -106,6 +106,10 @@
         }
         #{ $self }__input-group--result:last-child {
             height: 280px;
+
+            .form__group:last-child {
+                margin-bottom: 30px;
+            }
         }
     }
     &--fractal-chaos-bands {
